# StockPriceAI

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e539934b0909_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  predictions.py  scanner.py  stocks.py  watchlist.py  websocket.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  prediction.py  scan.py  user.py  watchlist.py
backend/app/schemas/: auth.py  common.py  prediction.py  scanner.py  stock.py  watchlist.py
backend/app/services/: auth.py  prediction.py  scanner.py  stock.py  websocket.py
backend/tests/: conftest.py  test_auth.py  test_prediction.py  test_scanner.py  test_stocks.py  test_watchlist.py  test_websocket.py
docs/: CICD_ROADMAP.md  CICD_STATUS.md  LOCAL_TESTING_GUIDE.md  OPENSOURCE_CHECKLIST.md  P01_CICD_ROADMAP.md  P02_AWS_SETUP.md  P03_CD_SETUP.md  P04_IMPROVEMENTS.md  REFACTORING_PLAN.md  TEST_COMPLETENESS_AUDIT.md  WEBSOCKET_ROUTING_ISSUE.md
frontend/: Dockerfile  package-lock.json  package.json
ml/: Dockerfile  README.md  pyproject.toml  requirements.txt  runbacktest.py
ml/app/: features.py  main.py  predictor.py
ml/app/api/v1/: router.py
ml/app/api/v1/endpoints/: predict.py  scanner.py  sentiment.py  technical.py
ml/app/core/: config.py
ml/app/models/: predictor.py  sentiment.py
ml/app/pipelines/: fetcher.py  get_recent_SP500_tickers.py  scanner.py  technical.py
ml/app/services/: charts.py  fetcher.py  scanner.py  sentiment.py  technical.py
ml/app/workers/: celery_app.py  scan_tasks.py
ml/tests/: test_api_predict.py  test_api_scanner.py  test_api_sentiment.py  test_api_technical.py  test_config.py  test_features.py  test_fetcher.py  test_health.py  test_predictor.py  test_scan_tasks.py  test_scanner.py  test_sentiment.py  test_technical.py
scripts/: test_local.sh  test_ws.py
stockprice-main/: .gitignore  README.md  app.py  charts.py  config.py  dashboard.py  fetcher.py  predictor.py  requirements.txt  scanner.py  sentiment.py  technical.py  watchlist.py
(+42 files in other folders)
