[tool.poetry]
name = "stockai-backend"
version = "0.1.0"
description = "StockPriceAI Backend API — FastAPI + PostgreSQL"
authors = ["StockPriceAI Team"]
readme = "README.md"
packages = [{ include = "app" }]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
pydantic-settings = "^2.3.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "^4.1.3"
httpx = "^0.27.0"
redis = "^5.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.8"
mypy = "^1.10.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
