[tool.poetry]
name = "stockai-ml"
version = "0.1.0"
description = "StockPriceAI ML Service — FastAPI + Celery + ML Models"
authors = ["StockPriceAI Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic-settings = "^2.3.0"

# Data & Finance
pandas = ">=2.1.0,<3.0.0"
numpy = ">=1.26.0,<2.0.0"
yfinance = "^0.2.54"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
lxml = "^5.0.0"
pytz = "^2024.1"

# ML
scikit-learn = ">=1.4.0,<2.0.0"
xgboost = "^2.0.3"
torch = { version = "^2.3.0", source = "pypi" }

# NLP
vaderSentiment = "^3.3.2"

# Visualization
plotly = "^5.20.0"

# Async queue
celery = { extras = ["redis"], version = "^5.4.0" }
redis = "^5.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.8"
mypy = "^1.10.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
